--- a/src/styles/editorV2Styles.css
+++ b/src/styles/editorV2Styles.css
@@ -15,7 +15,6 @@
     grid-template-rows: auto;
     height: 100%;
     background-color: rgba(103, 89, 94, 1);
-    overflow: hidden;
 }
 
 .sideColumn {
@@ -61,7 +60,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    width: calc(99vw - 250px);
+    width: calc(100vw - 265px);
     min-height: 90vh;
     background-color: rgba(103, 89, 94, 1);
 }
